force-app/main/default/objects/AssetPartyRelationship__c/AssetPartyRelationship__c.object-meta.xml
<CustomObject>
    <description>Objeto que estabelece a relação entre ativos (Assets) e partes (Parties), permitindo o gerenciamento das associações entre entidades dentro do sistema Salesforce.&quot;</description>
    <label>Asset Party Relationship</label>
    <nameField>
        <label>Asset Party Relationship</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets Party Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>