force-app/main/default/objects/AssetPartyRelationship__c/fields/ApprovedByOwner__c.field-meta.xml
<CustomField>
    <fullName>ApprovedByOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o relacionamento foi aprovado pelo titular do ativo associado. Este campo é utilizado para registrar a autorização explícita do titular em relação ao relacionamento estabelecido entre o ativo e a parte associada, conforme as diretrizes estabelecidas pelo cliente.</description>
    <label>Aprovado pelo Titular</label>
    <type>Checkbox</type>
</CustomField>