force-app/main/default/objects/AssetPartyRelationship__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Define o tipo de relação ou papel que a parte associada desempenha em relação ao ativo específico. Este campo é utilizado para categorizar e identificar o papel ou função da parte associada dentro do contexto do relacionamento estabelecido com o ativo.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Usuário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>