force-app/main/default/objects/AssetPartyRelationship__c/fields/SourceParty__c.field-meta.xml
<CustomField>
    <fullName>SourceParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Party</label>
    <referenceTo>vlocity_cmt__Party__c</referenceTo>
    <relationshipLabel>Assets Party Relationships</relationshipLabel>
    <relationshipName>Assets_Party_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>