force-app/main/default/objects/AssetPartyRelationship__c/fields/TargetAsset__c.field-meta.xml
<CustomField>
    <fullName>TargetAsset__c</fullName>
    <label>Target Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets Party Relationships</relationshipLabel>
    <relationshipName>AssetsPartyRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>